<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_f2f2f2"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/blue_2f84d0">

        <TextView
            android:id="@+id/tv_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:clickable="true"
            android:drawableLeft="@drawable/back"
            android:drawablePadding="6dp"
            android:gravity="center_vertical"
            android:onClick="onBack"
            android:paddingLeft="16dp"
            android:text=""
            android:textColor="@color/white_ffffff"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/export_data"
            android:textColor="@color/white_ffffff"
            android:textSize="17sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/shape_radius_white_bg"
        android:paddingLeft="25dp"
        android:paddingTop="10dp"
        android:paddingRight="25dp"
        android:paddingBottom="10dp">

        <LinearLayout
            android:id="@+id/ll_sync"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:gravity="center_horizontal"
            android:onClick="onSync"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_sync"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_sync" />

            <TextView
                android:id="@+id/tv_sync"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv_sync"
                android:text="Sync"
                android:textColor="@color/black_333333"
                android:textSize="13sp" />
        </LinearLayout>


        <CheckBox
            android:id="@+id/cb_data_show"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_toRightOf="@id/ll_sync"
            android:button="@null"
            android:checked="false"
            android:drawableTop="@drawable/selector_data_show"
            android:text="Display"
            android:textColor="@color/black_333333"
            android:textSize="13sp" />


        <TextView
            android:id="@+id/tv_export"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:clickable="true"
            android:drawableTop="@drawable/ic_download"
            android:onClick="onExport"
            android:text="Export"
            android:textColor="@color/black_333333"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_toLeftOf="@id/tv_export"
            android:clickable="true"
            android:drawableTop="@drawable/ic_empty"
            android:onClick="onEmpty"
            android:text="Erase all"
            android:textColor="@color/black_333333"
            android:textSize="15sp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_sync"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:layout_weight="1.0">

            <LinearLayout
                android:id="@+id/ll_th_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.3"
                        android:gravity="center"
                        android:text="Time"
                        android:textSize="12sp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:gravity="center"
                        android:text="Temperature(℃)"
                        android:textSize="12sp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:gravity="center"
                        android:text="Humidity(%RH)"
                        android:textSize="12sp" />
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_th_data"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1.0"
                    tools:listitem="@layout/item_export_data" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_th_chart_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white_ffffff"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:id="@+id/th_chart_total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:text="@string/th_chart_total"
                    android:textColor="@color/blue_2f84d0"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/th_chart_display"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:text="@string/th_chart_display"
                    android:textColor="@color/blue_2f84d0"
                    android:textSize="13sp" />

                <com.moko.bxp.nordic.view.THChartView
                    android:id="@+id/temp_chart_view"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginTop="5dp"
                    app:ylineDesc="Temperature(℃)" />

                <com.moko.bxp.nordic.view.THChartView
                    android:id="@+id/humi_chart_view"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginTop="20dp"
                    app:linecolor="@color/green_00ff00"
                    app:ylineDesc="Humidity(%RH)" />
            </LinearLayout>
        </FrameLayout>
    </RelativeLayout>
</LinearLayout>
