<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_f2f2f2"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/blue_2f84d0">

        <TextView
            android:id="@+id/tv_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:clickable="true"
            android:drawableLeft="@drawable/back"
            android:drawablePadding="6dp"
            android:gravity="center_vertical"
            android:onClick="onBack"
            android:paddingLeft="16dp"
            android:text=""
            android:textColor="@color/white_ffffff"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/temperature_humidity"
            android:textColor="@color/white_ffffff"
            android:textSize="17sp" />

        <ImageView
            android:id="@+id/iv_save"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:clickable="true"
            android:onClick="onSave"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:src="@drawable/save" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_radius_white_bg"
                android:paddingLeft="25dp"
                android:paddingTop="10dp"
                android:paddingRight="25dp"
                android:paddingBottom="10dp">

                <TextView
                    android:id="@+id/temp_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_temp"
                    android:drawablePadding="7dp"
                    android:gravity="center"
                    android:text="Temperature"
                    android:textColor="@color/black_333333"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/temp_title"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="40dp"
                    android:text="0.0"
                    android:textColor="@color/black_333333"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@id/tv_temp"
                    android:layout_alignLeft="@id/tv_humidity_unit"
                    android:text="℃"
                    android:textColor="@color/black_333333"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/humidity_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/temp_title"
                    android:layout_marginTop="20dp"
                    android:drawableLeft="@drawable/ic_humidity"
                    android:drawablePadding="7dp"
                    android:gravity="center"
                    android:text="Humidity"
                    android:textColor="@color/black_333333"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_humidity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/humidity_title"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="40dp"
                    android:text="0.0"
                    android:textColor="@color/black_333333"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_humidity_unit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@id/tv_humidity"
                    android:layout_alignParentRight="true"
                    android:text="%RH"
                    android:textColor="@color/black_333333"
                    android:textSize="15sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/humidity_title"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Sampling interval"
                        android:textColor="@color/black_333333"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/et_period"
                        android:layout_width="70dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:inputType="number"
                        android:text=""
                        android:textColor="@color/black_333333"
                        android:textSize="15sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="sec"
                        android:textColor="@color/black_333333"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="(1~65535)"
                        android:textColor="@color/grey_b3b3b3"
                        android:textSize="10sp" />
                </LinearLayout>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/slot_item_bg"
                android:orientation="vertical"
                android:paddingLeft="25dp"
                android:paddingTop="10dp"
                android:paddingRight="25dp"
                android:paddingBottom="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/storage_condition"
                    android:textColor="@color/black_333333"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <cn.carbswang.android.numberpickerview.library.NumberPickerView
                        android:id="@+id/npv_storage_condition"
                        android:layout_width="100dp"
                        android:layout_height="130dp"
                        android:background="@drawable/shape_stroke_blue_bg"
                        app:npv_DividerColor="@color/blue_2f84d0"
                        app:npv_DividerMarginLeft="15dp"
                        app:npv_DividerMarginRight="15dp"
                        app:npv_TextArray="@array/storage_condition"
                        app:npv_TextColorNormal="@color/grey_b3b3b3"
                        app:npv_TextColorSelected="@color/blue_2f84d0"
                        app:npv_TextSizeNormal="13sp"
                        app:npv_TextSizeSelected="15sp"
                        app:npv_WrapSelectorWheel="false" />

                    <FrameLayout
                        android:id="@+id/frame_storage_condition"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="20dp" />
                </LinearLayout>

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/slot_item_bg"
                android:paddingLeft="25dp"
                android:paddingTop="10dp"
                android:paddingRight="25dp"
                android:paddingBottom="10dp">

                <TextView
                    android:id="@+id/update_date_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Sync Beacon time"
                    android:textColor="@color/black_333333"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_update"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/shape_radius_blue_btn_bg"
                    android:clickable="true"
                    android:onClick="onUpdate"
                    android:paddingLeft="10dp"
                    android:paddingTop="5dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="5dp"
                    android:text="Sync"
                    android:textColor="@color/white_ffffff"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_update_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/update_date_title"
                    android:layout_marginTop="20dp"
                    android:text=""
                    android:textColor="@color/black_333333"
                    android:textSize="15sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_export_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/shape_radius_white_bg"
                android:clickable="true"
                android:onClick="onExportData"
                android:paddingLeft="25dp"
                android:paddingTop="10dp"
                android:paddingRight="25dp"
                android:paddingBottom="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/export_data"
                    android:textColor="@color/black_333333"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/arrow_right" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
